--- a/test/lab-client/src/main/resources/samples/welcome.fxml
+++ b/test/lab-client/src/main/resources/samples/welcome.fxml
@@ -1,54 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.*?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0"
-            prefWidth="700.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/18"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.client.controllers.WelcomeController">
+<?import javafx.scene.text.Font?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1000.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.client.controllers.WelcomeController">
     <children>
-        <AnchorPane layoutY="99.0" prefHeight="302.0" prefWidth="700.0" style="-fx-background-color: fafafa;">
+        <AnchorPane layoutY="98.0" prefHeight="500.0" prefWidth="1000.0" style="-fx-background-color: fafafa;">
             <children>
-                <TextField fx:id="login_filed" layoutX="40.0" layoutY="99.0" prefHeight="34.0" prefWidth="266.0"
-                           promptText="Логин"
-                           style="-fx-border-color: silver; -fx-border-radius: 5; -fx-border-width: 1;"
-                           AnchorPane.topAnchor="99.0">
+                <TextField fx:id="login_filed" layoutX="56.0" layoutY="138.0" prefHeight="36.0" prefWidth="251.0" promptText="Логин" style="-fx-border-color: silver; -fx-border-radius: 20; -fx-border-width: 0;" AnchorPane.topAnchor="138.0">
                     <font>
-                        <Font size="16.0"/>
+                        <Font size="18.0" />
                     </font>
+               <tooltip>
+                  <Tooltip fx:id="loginTooltip" text="Введите логин" />
+               </tooltip>
                 </TextField>
-                <PasswordField fx:id="password_field" layoutX="40.0" layoutY="151.0" prefHeight="34.0" prefWidth="266.0"
-                               promptText="Пароль"
-                               style="-fx-border-radius: 5; -fx-border-width: 1; -fx-border-color: silver;">
+                <PasswordField fx:id="password_field" layoutX="56.0" layoutY="209.0" prefHeight="39.0" prefWidth="251.0" promptText="Пароль" style="-fx-border-radius: 5; -fx-border-width: 1; -fx-border-color: silver;">
                     <font>
-                        <Font size="16.0"/>
+                        <Font size="18.0" />
                     </font>
+               <tooltip>
+                  <Tooltip fx:id="passwordTooltip" text="Введите пароль" />
+               </tooltip>
                 </PasswordField>
-                <Label layoutX="40.0" layoutY="41.0" prefHeight="45.0" prefWidth="290.0" text="Авторизация"
-                       textFill="#575555">
+                <Label layoutX="56.0" layoutY="39.0" prefHeight="69.0" prefWidth="330.0" text="Авторизация" textFill="#575555">
                     <font>
-                        <Font name="Candara" size="33.0"/>
+                        <Font name="Candara" size="45.0" />
                     </font>
                 </Label>
-                <Button fx:id="loginButton" layoutX="40.0" layoutY="208.0" mnemonicParsing="false" onAction="#signIn"
-                        prefHeight="34.0" prefWidth="88.0" style="-fx-background-color: #2E3348;" text="Войти"
-                        textAlignment="CENTER" textFill="WHITE">
+                <Button fx:id="loginButton" layoutX="56.0" layoutY="282.0" mnemonicParsing="false" onAction="#signIn" prefHeight="39.0" prefWidth="74.0" style="-fx-background-color: #2E3348;" text="Войти" textAlignment="CENTER" textFill="WHITE">
                     <font>
-                        <Font size="18.0"/>
+                        <Font size="18.0" />
                     </font>
                 </Button>
             </children>
         </AnchorPane>
-        <Label layoutX="205.0" layoutY="29.0" prefHeight="45.0" prefWidth="290.0" text="МаршRoutes" textFill="WHITE">
+        <Label layoutX="20.0" layoutY="14.0" prefHeight="78.0" prefWidth="416.0" text="RoutesViewer" textFill="WHITE">
             <font>
-                <Font name="Candara" size="43.0"/>
+                <Font name="Candara" size="66.0" />
             </font>
         </Label>
-        <Button fx:id="registrationButton" layoutX="523.0" layoutY="14.0" mnemonicParsing="false" onAction="#signUp"
-                prefHeight="34.0" prefWidth="165.0" style="-fx-background-color: #F39C63;" text="Зарегистрироваться"
-                textAlignment="CENTER" textFill="WHITE">
+        <Button fx:id="registrationButton" layoutX="771.0" layoutY="14.0" mnemonicParsing="false" onAction="#signUp" prefHeight="52.0" prefWidth="199.0" style="-fx-background-color: #F39C63;" text="Зарегистрироваться" textAlignment="CENTER" textFill="WHITE">
             <font>
-                <Font name="System Bold" size="14.0"/>
+                <Font name="System Bold" size="17.0" />
             </font>
         </Button>
     </children>
